--- a/style.css
+++ b/style.css
@@ -142,3 +142,62 @@ a:active  {text-decoration:none;}
   padding: 20px;
   border-radius: 5px;
 }
+
+
+
+/* CONNEXION */
+
+.body-connexion {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column; /* Permet au contenu d'être empilé verticalement */
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+        }
+
+  .h1-connexion {
+      margin-top: 0;
+      margin-bottom: 20px;
+  }
+
+  .form-connexion {
+     background-color: #fff;
+     border-radius: 8px;
+     padding: 20px;
+     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+     width: 300px;
+     text-align: center;
+  }
+
+  .label-connexion {
+     display: block;
+     margin-bottom: 8px;
+     font-weight: bold;
+}
+
+  .input-connexion {
+     width: 100%;
+     padding: 8px;
+     margin-bottom: 12px;
+     box-sizing: border-box;
+     border: 1px solid #ccc;
+     border-radius: 4px;
+}
+
+  .connexion-button {
+      background-color: #4caf50;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      width: 100%;
+  }
+
+   .connexion-button:hover {
+      background-color: #45a049;
+  }
